# dodo-payments-assignment

./: .dockerignore  .gitignore  AI_USAGE.md  API.md  Cargo.toml  DESIGN.md  Dodo payments assignment.postman_collection.json  README.md  docker-compose.yml
migrations/: 001_init.sql  002_auth_core.sql  003_billing_core.sql  004_webhooks.sql  005_seed_demo_business.sql
scripts/: wait-and-migrate.sh
services/invoice-api/: Cargo.toml  Dockerfile
services/invoice-api/src/: auth.rs  customers.rs  error.rs  invoice_state.rs  invoices.rs  lib.rs  main.rs  payments.rs  webhook_outbox.rs  webhook_worker.rs  webhooks.rs
services/invoice-api/tests/: concurrency_pay.rs  idempotency_retry.rs  psp_failure.rs
services/mock-psp/: Cargo.toml  Dockerfile
services/mock-psp/src/: main.rs
